Fixed the footer nav overflow

--- a/src/sass/layout/_footer.sass
+++ b/src/sass/layout/_footer.sass
@@ -8,6 +8,7 @@ footer.footer
   #links
     color: #999
     text-align: center
+    word-wrap: break-word
     a
       color: #999
       font-weight: bold
